Travis update: Sep 2024 (Build 796)
[skip ci]
