# api/openapi.yaml
@@ -2035,6 +2035,57 @@ components:
           validity: 360
           text: text
           button_text: button_text
+          video:
+            duration:
+            - image:
+                filename: filename
+                link: link
+                caption: caption
+                id: id
+              date_time:
+                fallback_value: fallback_value
+              document:
+                filename: filename
+                link: link
+                caption: caption
+                id: id
+              currency:
+                fallback_value: fallback_value
+                code: code
+                amount_1000: amount_1000
+              text: text
+              video:
+                filename: filename
+                link: link
+                caption: caption
+                id: id
+              type: type
+            - image:
+                filename: filename
+                link: link
+                caption: caption
+                id: id
+              date_time:
+                fallback_value: fallback_value
+              document:
+                filename: filename
+                link: link
+                caption: caption
+                id: id
+              currency:
+                fallback_value: fallback_value
+                code: code
+                amount_1000: amount_1000
+              text: text
+              video:
+                filename: filename
+                link: link
+                caption: caption
+                id: id
+              type: type
+            thumbnail: thumbnail
+            url: url
+            file_size: 0
           ttl: 21600
         - sender: sender
           image_url: image_url
@@ -2043,6 +2094,57 @@ components:
           validity: 360
           text: text
           button_text: button_text
+          video:
+            duration:
+            - image:
+                filename: filename
+                link: link
+                caption: caption
+                id: id
+              date_time:
+                fallback_value: fallback_value
+              document:
+                filename: filename
+                link: link
+                caption: caption
+                id: id
+              currency:
+                fallback_value: fallback_value
+                code: code
+                amount_1000: amount_1000
+              text: text
+              video:
+                filename: filename
+                link: link
+                caption: caption
+                id: id
+              type: type
+            - image:
+                filename: filename
+                link: link
+                caption: caption
+                id: id
+              date_time:
+                fallback_value: fallback_value
+              document:
+                filename: filename
+                link: link
+                caption: caption
+                id: id
+              currency:
+                fallback_value: fallback_value
+                code: code
+                amount_1000: amount_1000
+              text: text
+              video:
+                filename: filename
+                link: link
+                caption: caption
+                id: id
+              type: type
+            thumbnail: thumbnail
+            url: url
+            file_size: 0
           ttl: 21600
         to: to
         priority: low
@@ -2107,6 +2209,57 @@ components:
         validity: 360
         text: text
         button_text: button_text
+        video:
+          duration:
+          - image:
+              filename: filename
+              link: link
+              caption: caption
+              id: id
+            date_time:
+              fallback_value: fallback_value
+            document:
+              filename: filename
+              link: link
+              caption: caption
+              id: id
+            currency:
+              fallback_value: fallback_value
+              code: code
+              amount_1000: amount_1000
+            text: text
+            video:
+              filename: filename
+              link: link
+              caption: caption
+              id: id
+            type: type
+          - image:
+              filename: filename
+              link: link
+              caption: caption
+              id: id
+            date_time:
+              fallback_value: fallback_value
+            document:
+              filename: filename
+              link: link
+              caption: caption
+              id: id
+            currency:
+              fallback_value: fallback_value
+              code: code
+              amount_1000: amount_1000
+            text: text
+            video:
+              filename: filename
+              link: link
+              caption: caption
+              id: id
+            type: type
+          thumbnail: thumbnail
+          url: url
+          file_size: 0
         ttl: 21600
       properties:
         sender:
@@ -2151,6 +2304,83 @@ components:
           enum:
           - viber
           type: string
+        video:
+          $ref: '#/components/schemas/ViberVideo'
+      type: object
+    ViberVideo:
+      description: Viber video object
+      example:
+        duration:
+        - image:
+            filename: filename
+            link: link
+            caption: caption
+            id: id
+          date_time:
+            fallback_value: fallback_value
+          document:
+            filename: filename
+            link: link
+            caption: caption
+            id: id
+          currency:
+            fallback_value: fallback_value
+            code: code
+            amount_1000: amount_1000
+          text: text
+          video:
+            filename: filename
+            link: link
+            caption: caption
+            id: id
+          type: type
+        - image:
+            filename: filename
+            link: link
+            caption: caption
+            id: id
+          date_time:
+            fallback_value: fallback_value
+          document:
+            filename: filename
+            link: link
+            caption: caption
+            id: id
+          currency:
+            fallback_value: fallback_value
+            code: code
+            amount_1000: amount_1000
+          text: text
+          video:
+            filename: filename
+            link: link
+            caption: caption
+            id: id
+          type: type
+        thumbnail: thumbnail
+        url: url
+        file_size: 0
+      properties:
+        url:
+          description: URL pointing to the video resource.
+          type: string
+        thumbnail:
+          description: URL pointing to the video thumbnail resource.
+          type: string
+        file_size:
+          description: Size of the video file in bytes. Cannot be larger than 200MB.
+          type: integer
+        duration:
+          description: Duration of the video in seconds. Cannot be longer than 600
+            seconds.
+          items:
+            $ref: '#/components/schemas/WhatsAppParameter'
+          type: array
+      required:
+      - duration
+      - file_size
+      - thumbnail
+      - url
       type: object
     WhatsApp:
       description: |-
@@ -2262,6 +2492,10 @@ components:
       type: object
     WhatsAppCurrency:
       description: Whatsapp currency object.
+      example:
+        fallback_value: fallback_value
+        code: code
+        amount_1000: amount_1000
       properties:
         fallback_value:
           description: Default text if localization fails.
@@ -2328,6 +2562,8 @@ components:
       type: object
     WhatsAppDatetime:
       description: Whatsapp datetime object.
+      example:
+        fallback_value: fallback_value
       properties:
         fallback_value:
           description: Default text.
@@ -2337,6 +2573,11 @@ components:
       type: object
     WhatsAppMedia:
       description: Whatsapp media object.
+      example:
+        filename: filename
+        link: link
+        caption: caption
+        id: id
       properties:
         id:
           description: The media object ID. Do not use this field when message type
@@ -2357,6 +2598,30 @@ components:
       type: object
     WhatsAppParameter:
       description: Whatsapp component parameter.
+      example:
+        image:
+          filename: filename
+          link: link
+          caption: caption
+          id: id
+        date_time:
+          fallback_value: fallback_value
+        document:
+          filename: filename
+          link: link
+          caption: caption
+          id: id
+        currency:
+          fallback_value: fallback_value
+          code: code
+          amount_1000: amount_1000
+        text: text
+        video:
+          filename: filename
+          link: link
+          caption: caption
+          id: id
+        type: type
       properties:
         type:
           description: Type of the parameter.
@@ -2628,6 +2893,57 @@ components:
             validity: 360
             text: text
             button_text: button_text
+            video:
+              duration:
+              - image:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                date_time:
+                  fallback_value: fallback_value
+                document:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                currency:
+                  fallback_value: fallback_value
+                  code: code
+                  amount_1000: amount_1000
+                text: text
+                video:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                type: type
+              - image:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                date_time:
+                  fallback_value: fallback_value
+                document:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                currency:
+                  fallback_value: fallback_value
+                  code: code
+                  amount_1000: amount_1000
+                text: text
+                video:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                type: type
+              thumbnail: thumbnail
+              url: url
+              file_size: 0
             ttl: 21600
           - sender: sender
             image_url: image_url
@@ -2636,6 +2952,57 @@ components:
             validity: 360
             text: text
             button_text: button_text
+            video:
+              duration:
+              - image:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                date_time:
+                  fallback_value: fallback_value
+                document:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                currency:
+                  fallback_value: fallback_value
+                  code: code
+                  amount_1000: amount_1000
+                text: text
+                video:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                type: type
+              - image:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                date_time:
+                  fallback_value: fallback_value
+                document:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                currency:
+                  fallback_value: fallback_value
+                  code: code
+                  amount_1000: amount_1000
+                text: text
+                video:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                type: type
+              thumbnail: thumbnail
+              url: url
+              file_size: 0
             ttl: 21600
           to: to
           priority: low
@@ -2650,6 +3017,57 @@ components:
             validity: 360
             text: text
             button_text: button_text
+            video:
+              duration:
+              - image:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                date_time:
+                  fallback_value: fallback_value
+                document:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                currency:
+                  fallback_value: fallback_value
+                  code: code
+                  amount_1000: amount_1000
+                text: text
+                video:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                type: type
+              - image:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                date_time:
+                  fallback_value: fallback_value
+                document:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                currency:
+                  fallback_value: fallback_value
+                  code: code
+                  amount_1000: amount_1000
+                text: text
+                video:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                type: type
+              thumbnail: thumbnail
+              url: url
+              file_size: 0
             ttl: 21600
           - sender: sender
             image_url: image_url
@@ -2658,6 +3076,57 @@ components:
             validity: 360
             text: text
             button_text: button_text
+            video:
+              duration:
+              - image:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                date_time:
+                  fallback_value: fallback_value
+                document:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                currency:
+                  fallback_value: fallback_value
+                  code: code
+                  amount_1000: amount_1000
+                text: text
+                video:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                type: type
+              - image:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                date_time:
+                  fallback_value: fallback_value
+                document:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                currency:
+                  fallback_value: fallback_value
+                  code: code
+                  amount_1000: amount_1000
+                text: text
+                video:
+                  filename: filename
+                  link: link
+                  caption: caption
+                  id: id
+                type: type
+              thumbnail: thumbnail
+              url: url
+              file_size: 0
             ttl: 21600
           to: to
           priority: low
