# src/main/java/com/messente/api/ViberVideo.java
@@ -1,0 +1,400 @@
+/*
+ * Messente API
+ * [Messente](https://messente.com) is a global provider of messaging and user verification services.  * Send and receive SMS, Viber, WhatsApp and Telegram messages. * Manage contacts and groups. * Fetch detailed info about phone numbers. * Blacklist phone numbers to make sure you're not sending any unwanted messages.  Messente builds [tools](https://messente.com/documentation) to help organizations connect their services to people anywhere in the world.
+ *
+ * The version of the OpenAPI document: 2.0.0
+ * Contact: messente@messente.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+package com.messente.api;
+
+import java.util.Objects;
+import com.google.gson.TypeAdapter;
+import com.google.gson.annotations.JsonAdapter;
+import com.google.gson.annotations.SerializedName;
+import com.google.gson.stream.JsonReader;
+import com.google.gson.stream.JsonWriter;
+import com.messente.api.WhatsAppParameter;
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+
+import com.google.gson.Gson;
+import com.google.gson.GsonBuilder;
+import com.google.gson.JsonArray;
+import com.google.gson.JsonDeserializationContext;
+import com.google.gson.JsonDeserializer;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
+import com.google.gson.JsonParseException;
+import com.google.gson.TypeAdapterFactory;
+import com.google.gson.reflect.TypeToken;
+import com.google.gson.TypeAdapter;
+import com.google.gson.stream.JsonReader;
+import com.google.gson.stream.JsonWriter;
+import java.io.IOException;
+
+import java.lang.reflect.Type;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+
+import com.messente.JSON;
+
+/**
+ * Viber video object
+ */
+@javax.annotation.Generated(value = "org.openapitools.codegen.languages.JavaClientCodegen", comments = "Generator version: 7.6.0")
+public class ViberVideo {
+  public static final String SERIALIZED_NAME_URL = "url";
+  @SerializedName(SERIALIZED_NAME_URL)
+  private String url;
+
+  public static final String SERIALIZED_NAME_THUMBNAIL = "thumbnail";
+  @SerializedName(SERIALIZED_NAME_THUMBNAIL)
+  private String thumbnail;
+
+  public static final String SERIALIZED_NAME_FILE_SIZE = "file_size";
+  @SerializedName(SERIALIZED_NAME_FILE_SIZE)
+  private Integer fileSize;
+
+  public static final String SERIALIZED_NAME_DURATION = "duration";
+  @SerializedName(SERIALIZED_NAME_DURATION)
+  private List<WhatsAppParameter> duration = new ArrayList<>();
+
+  public ViberVideo() {
+  }
+
+  public ViberVideo url(String url) {
+    this.url = url;
+    return this;
+  }
+
+   /**
+   * URL pointing to the video resource.
+   * @return url
+  **/
+  @javax.annotation.Nonnull
+  public String getUrl() {
+    return url;
+  }
+
+  public void setUrl(String url) {
+    this.url = url;
+  }
+
+
+  public ViberVideo thumbnail(String thumbnail) {
+    this.thumbnail = thumbnail;
+    return this;
+  }
+
+   /**
+   * URL pointing to the video thumbnail resource.
+   * @return thumbnail
+  **/
+  @javax.annotation.Nonnull
+  public String getThumbnail() {
+    return thumbnail;
+  }
+
+  public void setThumbnail(String thumbnail) {
+    this.thumbnail = thumbnail;
+  }
+
+
+  public ViberVideo fileSize(Integer fileSize) {
+    this.fileSize = fileSize;
+    return this;
+  }
+
+   /**
+   * Size of the video file in bytes. Cannot be larger than 200MB.
+   * @return fileSize
+  **/
+  @javax.annotation.Nonnull
+  public Integer getFileSize() {
+    return fileSize;
+  }
+
+  public void setFileSize(Integer fileSize) {
+    this.fileSize = fileSize;
+  }
+
+
+  public ViberVideo duration(List<WhatsAppParameter> duration) {
+    this.duration = duration;
+    return this;
+  }
+
+  public ViberVideo addDurationItem(WhatsAppParameter durationItem) {
+    if (this.duration == null) {
+      this.duration = new ArrayList<>();
+    }
+    this.duration.add(durationItem);
+    return this;
+  }
+
+   /**
+   * Duration of the video in seconds. Cannot be longer than 600 seconds.
+   * @return duration
+  **/
+  @javax.annotation.Nonnull
+  public List<WhatsAppParameter> getDuration() {
+    return duration;
+  }
+
+  public void setDuration(List<WhatsAppParameter> duration) {
+    this.duration = duration;
+  }
+
+  /**
+   * A container for additional, undeclared properties.
+   * This is a holder for any undeclared properties as specified with
+   * the 'additionalProperties' keyword in the OAS document.
+   */
+  private Map<String, Object> additionalProperties;
+
+  /**
+   * Set the additional (undeclared) property with the specified name and value.
+   * If the property does not already exist, create it otherwise replace it.
+   *
+   * @param key name of the property
+   * @param value value of the property
+   * @return the ViberVideo instance itself
+   */
+  public ViberVideo putAdditionalProperty(String key, Object value) {
+    if (this.additionalProperties == null) {
+        this.additionalProperties = new HashMap<String, Object>();
+    }
+    this.additionalProperties.put(key, value);
+    return this;
+  }
+
+  /**
+   * Return the additional (undeclared) property.
+   *
+   * @return a map of objects
+   */
+  public Map<String, Object> getAdditionalProperties() {
+    return additionalProperties;
+  }
+
+  /**
+   * Return the additional (undeclared) property with the specified name.
+   *
+   * @param key name of the property
+   * @return an object
+   */
+  public Object getAdditionalProperty(String key) {
+    if (this.additionalProperties == null) {
+        return null;
+    }
+    return this.additionalProperties.get(key);
+  }
+
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    ViberVideo viberVideo = (ViberVideo) o;
+    return Objects.equals(this.url, viberVideo.url) &&
+        Objects.equals(this.thumbnail, viberVideo.thumbnail) &&
+        Objects.equals(this.fileSize, viberVideo.fileSize) &&
+        Objects.equals(this.duration, viberVideo.duration)&&
+        Objects.equals(this.additionalProperties, viberVideo.additionalProperties);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(url, thumbnail, fileSize, duration, additionalProperties);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class ViberVideo {\n");
+    sb.append("    url: ").append(toIndentedString(url)).append("\n");
+    sb.append("    thumbnail: ").append(toIndentedString(thumbnail)).append("\n");
+    sb.append("    fileSize: ").append(toIndentedString(fileSize)).append("\n");
+    sb.append("    duration: ").append(toIndentedString(duration)).append("\n");
+    sb.append("    additionalProperties: ").append(toIndentedString(additionalProperties)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+
+
+  public static HashSet<String> openapiFields;
+  public static HashSet<String> openapiRequiredFields;
+
+  static {
+    // a set of all properties/fields (JSON key names)
+    openapiFields = new HashSet<String>();
+    openapiFields.add("url");
+    openapiFields.add("thumbnail");
+    openapiFields.add("file_size");
+    openapiFields.add("duration");
+
+    // a set of required properties/fields (JSON key names)
+    openapiRequiredFields = new HashSet<String>();
+    openapiRequiredFields.add("url");
+    openapiRequiredFields.add("thumbnail");
+    openapiRequiredFields.add("file_size");
+    openapiRequiredFields.add("duration");
+  }
+
+ /**
+  * Validates the JSON Element and throws an exception if issues found
+  *
+  * @param jsonElement JSON Element
+  * @throws IOException if the JSON Element is invalid with respect to ViberVideo
+  */
+  public static void validateJsonElement(JsonElement jsonElement) throws IOException {
+      if (jsonElement == null) {
+        if (!ViberVideo.openapiRequiredFields.isEmpty()) { // has required fields but JSON element is null
+          throw new IllegalArgumentException(String.format("The required field(s) %s in ViberVideo is not found in the empty JSON string", ViberVideo.openapiRequiredFields.toString()));
+        }
+      }
+
+      // check to make sure all required properties/fields are present in the JSON string
+      for (String requiredField : ViberVideo.openapiRequiredFields) {
+        if (jsonElement.getAsJsonObject().get(requiredField) == null) {
+          throw new IllegalArgumentException(String.format("The required field `%s` is not found in the JSON string: %s", requiredField, jsonElement.toString()));
+        }
+      }
+        JsonObject jsonObj = jsonElement.getAsJsonObject();
+      if (!jsonObj.get("url").isJsonPrimitive()) {
+        throw new IllegalArgumentException(String.format("Expected the field `url` to be a primitive type in the JSON string but got `%s`", jsonObj.get("url").toString()));
+      }
+      if (!jsonObj.get("thumbnail").isJsonPrimitive()) {
+        throw new IllegalArgumentException(String.format("Expected the field `thumbnail` to be a primitive type in the JSON string but got `%s`", jsonObj.get("thumbnail").toString()));
+      }
+      // ensure the json data is an array
+      if (!jsonObj.get("duration").isJsonArray()) {
+        throw new IllegalArgumentException(String.format("Expected the field `duration` to be an array in the JSON string but got `%s`", jsonObj.get("duration").toString()));
+      }
+
+      JsonArray jsonArrayduration = jsonObj.getAsJsonArray("duration");
+      // validate the required field `duration` (array)
+      for (int i = 0; i < jsonArrayduration.size(); i++) {
+        WhatsAppParameter.validateJsonElement(jsonArrayduration.get(i));
+      };
+  }
+
+  public static class CustomTypeAdapterFactory implements TypeAdapterFactory {
+    @SuppressWarnings("unchecked")
+    @Override
+    public <T> TypeAdapter<T> create(Gson gson, TypeToken<T> type) {
+       if (!ViberVideo.class.isAssignableFrom(type.getRawType())) {
+         return null; // this class only serializes 'ViberVideo' and its subtypes
+       }
+       final TypeAdapter<JsonElement> elementAdapter = gson.getAdapter(JsonElement.class);
+       final TypeAdapter<ViberVideo> thisAdapter
+                        = gson.getDelegateAdapter(this, TypeToken.get(ViberVideo.class));
+
+       return (TypeAdapter<T>) new TypeAdapter<ViberVideo>() {
+           @Override
+           public void write(JsonWriter out, ViberVideo value) throws IOException {
+             JsonObject obj = thisAdapter.toJsonTree(value).getAsJsonObject();
+             obj.remove("additionalProperties");
+             // serialize additional properties
+             if (value.getAdditionalProperties() != null) {
+               for (Map.Entry<String, Object> entry : value.getAdditionalProperties().entrySet()) {
+                 if (entry.getValue() instanceof String)
+                   obj.addProperty(entry.getKey(), (String) entry.getValue());
+                 else if (entry.getValue() instanceof Number)
+                   obj.addProperty(entry.getKey(), (Number) entry.getValue());
+                 else if (entry.getValue() instanceof Boolean)
+                   obj.addProperty(entry.getKey(), (Boolean) entry.getValue());
+                 else if (entry.getValue() instanceof Character)
+                   obj.addProperty(entry.getKey(), (Character) entry.getValue());
+                 else {
+                   JsonElement jsonElement = gson.toJsonTree(entry.getValue());
+                   if (jsonElement.isJsonArray()) {
+                     obj.add(entry.getKey(), jsonElement.getAsJsonArray());
+                   } else {
+                     obj.add(entry.getKey(), jsonElement.getAsJsonObject());
+                   }
+                 }
+               }
+             }
+             elementAdapter.write(out, obj);
+           }
+
+           @Override
+           public ViberVideo read(JsonReader in) throws IOException {
+             JsonElement jsonElement = elementAdapter.read(in);
+             validateJsonElement(jsonElement);
+             JsonObject jsonObj = jsonElement.getAsJsonObject();
+             // store additional fields in the deserialized instance
+             ViberVideo instance = thisAdapter.fromJsonTree(jsonObj);
+             for (Map.Entry<String, JsonElement> entry : jsonObj.entrySet()) {
+               if (!openapiFields.contains(entry.getKey())) {
+                 if (entry.getValue().isJsonPrimitive()) { // primitive type
+                   if (entry.getValue().getAsJsonPrimitive().isString())
+                     instance.putAdditionalProperty(entry.getKey(), entry.getValue().getAsString());
+                   else if (entry.getValue().getAsJsonPrimitive().isNumber())
+                     instance.putAdditionalProperty(entry.getKey(), entry.getValue().getAsNumber());
+                   else if (entry.getValue().getAsJsonPrimitive().isBoolean())
+                     instance.putAdditionalProperty(entry.getKey(), entry.getValue().getAsBoolean());
+                   else
+                     throw new IllegalArgumentException(String.format("The field `%s` has unknown primitive type. Value: %s", entry.getKey(), entry.getValue().toString()));
+                 } else if (entry.getValue().isJsonArray()) {
+                     instance.putAdditionalProperty(entry.getKey(), gson.fromJson(entry.getValue(), List.class));
+                 } else { // JSON object
+                     instance.putAdditionalProperty(entry.getKey(), gson.fromJson(entry.getValue(), HashMap.class));
+                 }
+               }
+             }
+             return instance;
+           }
+
+       }.nullSafe();
+    }
+  }
+
+ /**
+  * Create an instance of ViberVideo given an JSON string
+  *
+  * @param jsonString JSON string
+  * @return An instance of ViberVideo
+  * @throws IOException if the JSON string is invalid with respect to ViberVideo
+  */
+  public static ViberVideo fromJson(String jsonString) throws IOException {
+    return JSON.getGson().fromJson(jsonString, ViberVideo.class);
+  }
+
+ /**
+  * Convert an instance of ViberVideo to an JSON string
+  *
+  * @return JSON string
+  */
+  public String toJson() {
+    return JSON.getGson().toJson(this);
+  }
+}
+
